--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 
-         Text::TabFile - Module for parsing tab delimited files - v 1.10
+         Tkx::Login - A Simple Login Window for Tkx - v VERSIONTAG
 
 ================================================================================
 SYNOPSIS:
