--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@ Revision history for Perl extension Tkx::Login.
 VERSIONTAG  DATETAG
 
 	Added a "Cancel" button option.
+	Updated meta information
+	Including a LICENSE file
 
 1.04  2012/03/28
 
