--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Tkx::Login.
 VERSIONTAG  DATETAG
 
 	Meta information now automatically generated
+	Adding a POD test
 
 1.05  2014/02/25
 
