--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension Tkx::Login.
 
 VERSIONTAG  DATETAG
 
+	Now using "warnings"
+
+1.06  2014/03/08
+
 	Meta information now automatically generated
 	Adding a POD test
 
