Moving to Test::Simple from Test

--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension Tkx::Login.
 
 VERSIONTAG  DATETAG
 
+	Moving to Test::Simple
+
+1.07  2014/03/14
+
 	Now using "warnings"
 
 1.06  2014/03/08
