--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@ Revision history for Perl extension Tkx::Login.
 
 VERSIONTAG  DATETAG
 
+        Using GNU TAR now. The previous release had PAX headers in the tar file.
+        Build scripts now automatically configure minium perl version.
+
+1.10  2014/04/13
+
 	Adding the NAME block to the POD with synopsis.
 
 1.09  2014/03/20
